--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "mcp-dbs",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "MCP TypeScript SDK for database connections",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "bin": {
     "mcp-dbs": "dist/cli.js"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cuongtl1992/mcp-dbs.git"
   },
   "directories": {
     "test": "test"
@@ -26,23 +34,29 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "mssql": "^11.0.1",
+    "pg": "^8.14.1",
+    "sqlite3": "^5.1.7",
+    "ts-jest": "^29.2.6",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/mssql": "^9.1.7",
     "@types/node": "^22.13.10",
     "@types/pg": "^8.11.11",
     "@types/sqlite3": "^5.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.3",
     "jest": "^29.7.0",
-    "mssql": "^11.0.1",
-    "pg": "^8.14.1",
-    "sqlite3": "^5.1.7",
-    "ts-jest": "^29.2.6",
-    "typescript": "^5.8.2",
-    "zod": "^3.24.2"
+    "typescript": "^5.8.2"
   },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
